DATE        AUTHOR    CHANGE
----------- --------- ---------------------------------------------------------
May-05-2002 allenb    Added save_file method for document node.
Apr-05-2002 allenb    Fix EOF and -1 chars on Irix.
Apr-03-2002 allenb    Added Node::getChild(char*) to avoid matching templated
                      predicate version.