@@ -1,4 +1,4 @@
-// this xmlpp was branched from the original LGPL'd xmlpp version 0.6
+// cppdom was branched from the original LGPL'd xmlpp version 0.6
 // this new branched xmlpp is under the same LGPL (of course) and
 // is being maintained by:
 //    kevin meinert <subatomic@users.sf.net>
@@ -32,10 +32,10 @@
 */
 
 // needed includes
-#include <xmlpp/xmlparser.h>
+#include <cppdom/xmlparser.h>
 
 // namespace declaration
-namespace xmlpp {
+namespace cppdom {
 
 
 // xmlparser methods
