@@ -1,9 +1,9 @@
-#include <xmlpp/predicates.h>
+#include <cppdom/predicates.h>
 
 int main()
 {
-   xmlpp::XMLContextPtr ctx( new xmlpp::XMLContext );
-   xmlpp::XMLDocument doc( ctx );
+   cppdom::XMLContextPtr ctx( new cppdom::XMLContext );
+   cppdom::XMLDocument doc( ctx );
    std::string filename = "hamlet.xml";
    
    // load a xml document from a file
@@ -11,15 +11,15 @@ int main()
    {
       doc.load_file( filename );
    }
-   catch (xmlpp::xmlerror e)
+   catch (cppdom::xmlerror e)
    {
       std::cerr << "Error: " << e.get_string() << std::endl;
       if (e.get_info().size())
       {
          std::cerr << "File: " << e.get_info() << std::endl;
       }
-      if (e.get_error() != xmlpp::xml_filename_invalid &&
-          e.get_error() != xmlpp::xml_file_access)
+      if (e.get_error() != cppdom::xml_filename_invalid &&
+          e.get_error() != cppdom::xml_file_access)
       {
 /*
          e.show_error( ctx );
@@ -31,17 +31,17 @@ int main()
       return false;
    }
 
-   xmlpp::XMLNodePtr root = doc.getChild( "gameinput" );
+   cppdom::XMLNodePtr root = doc.getChild( "gameinput" );
 
       
 
    // get all nodes with noattrs attributes...
-   xmlpp::XMLNodeList nl = root->getChildrenPred( xmlpp::HasAttributeNamePredicate( "noattrs" ) );
+   cppdom::XMLNodeList nl = root->getChildrenPred( cppdom::HasAttributeNamePredicate( "noattrs" ) );
    
    assert( nl.size() == 1 && "test failed" );
    
    // get all the nodes that set up Mouse devices
-   nl = root->getChildrenPred( xmlpp::HasAttributeValuePredicate( "device", "Mouse" ) );
+   nl = root->getChildrenPred( cppdom::HasAttributeValuePredicate( "device", "Mouse" ) );
    assert( nl.size() == 2 && "test failed" );
   
    std::cout << "Tests Passed" << std::endl;
